# libifmap2c

./: CMakeLists.txt  Develop.md  ExamplesChanges030.md  Install.md  LibraryChanges030.md  ProjectHome.md  README.md  Testing.md  rename
branches/libifmap2c-0.3.0-restructure/: CMakeLists.txt
branches/libifmap2c-0.3.0-restructure/communication/: arc.cpp  ifmapcommunication.cpp  ssrc.cpp  xmlcommunication.cpp
branches/libifmap2c-0.3.0-restructure/identifier/: accessrequest.cpp  baseidentifierhandler.cpp  baseidentifierhandler.h  device.cpp  identifier.cpp  identifierhandlerdispatch.cpp  identifiers.cpp  identity.cpp  ipaddress.cpp  macaddress.cpp  stdhandler.cpp
branches/libifmap2c-0.3.0-restructure/ifmap/: arc.cpp  baserequesthandler.cpp  channel.cpp  errorresult.cpp  identifier.cpp  identifierhandlerdispatch.cpp  ifmapbaseidentifierhandler.cpp  ifmapbaserequesthandler.cpp  ifmapchannel.cpp  ifmapidentifierhandlerdispatch.cpp  ifmaprequesthandlerdispatch.cpp  publishrequest.cpp  requesthandlerdispatch.cpp  requests.cpp  ssrc.cpp
branches/libifmap2c-0.3.0-restructure/include/: arc.h  endsessionrequest.h  identifier.h  identifierholder.h  identity.h  ifmapchannel.h  ifmapcommunication.h  ifmaprequest.h  ipaddress.h  request.h  (+23 more)
libifmap2c/: CMakeLists.txt  ChangeLog
libifmap2c-examples/: CMakeLists.txt  ar-dev.cpp  auth-by.cpp  dev-ip.cpp  ip-mac.cpp  metadata-examples.cpp  pdp-dhcp-example.cpp  single-multi-test.cpp  subTest.cpp  test-close-conn.cpp  test-identifiers.cpp  test-notify-event-twice.cpp  test-single-multi.cpp  test-update-event-twice.cpp  test-update-twice.cpp  test-wrong-cardinality.cpp
libifmap2c-examples-0.4.0-pre/perf/: CMakeLists.txt  perf-complete-graph.cpp  perf-pulsing-star-ext.cpp  perf-rand-graph.cpp
libifmap2c-examples/cmds/: ar-cap.cpp  ar-dev.cpp  ar-mac.cpp  auth-by.cpp  layer2-info.cpp  purge.cpp
libifmap2c-examples/common/: common.h  testcommon.cpp
libifmap2c-examples/ibos/: CMakeLists.txt  poll-all-ip-mac.cpp  search-all-ip-mac.cpp
libifmap2c-examples/perf/: CMakeLists.txt  perf-complete-graph.cpp  perf-publish-rand.cpp  perf-rand-graph-rand.cpp  perf-renew-ref.cpp  perf-search-rand.cpp
libifmap2c-examples/tests/: CMakeLists.txt  test-add-subgraph.cpp  test-close-conn.cpp  test-identifiers.cpp  test-max-poll-result-size-change.cpp  test-notify.cpp  test-poll-endsession.cpp  test-poll-results-too-big.cpp  test-poll-twice.cpp  test-remove-subgraph.cpp  test-replace-delete.cpp  test-search-result-too-big.cpp  test-single-multi.cpp  test-sub-depth.cpp  test-subgraph1.cpp  test-subgraph2.cpp  test-subgraph3.cpp  test-subgraph4.cpp  test-subgraph5.cpp  test-subscription-too-big.cpp
libifmap2c-examples/utils/: CMakeLists.txt  ar-ar.cpp  ar-cap.cpp  ar-dev.cpp  ar-ip.cpp  ar-mac.cpp  auth-by.cpp  common.cpp  common.h  dev-attr.cpp  dev-ip.cpp  ip-disc-by.cpp  ip-mac.cpp  layer2-info.cpp  mac-disc-by.cpp  purge.cpp
libifmap2c-examples/wiki/: example-mapc1.cpp  example-mapc2.cpp
libifmap2c/communication/: ifmapcommunication.cpp  lowlevelcurlcommunication.cpp  ssrc.cpp
libifmap2c/ifmap/: baseidentifierhandler.cpp  baserequesthandler.cpp  errorresult.cpp  requesthandlerdispatch.cpp
libifmap2c/include/: accessrequest.h  arc.h  errorresult.h  errorresulterror.h  identifier.h  ifmapcommunication.h  ifmaperror.h  ifmaprequest.h  ipaddress.h  lowlevelcommunication.h  metadata.h  newsessionresult.h  pollresult.h  request.h  requests.h  responseparser.h  searchrequest.h  searchresult.h  ssrc.h  subscribeupdate.h  tcgifmapbase.h  xmlbinding.h  xmlcommunication.h  xmlerrors.h
libifmap2c/metadata/: metadata.cpp
libifmap2c/request/: publishnotify.cpp  requests.cpp  subscribedelete.cpp  subscriberequest.cpp  subscribeupdate.cpp
libifmap2c/response/: errorresulterror.cpp  pollresult.cpp  responseparser.cpp  resultitem.cpp  searchresult.cpp
libifmap2c/xml/: basicxmlmarshalable.cpp  libxml2marshaller.cpp
libifmap2c/xmlcomm/: lowlevelcurlcommunication.cpp
trunk/: CMakeLists.txt
trunk/common/: typedefs.h
trunk/communication/: arc.cpp  arc.h  communicationerror.cpp  communicationerror.h  ifmapcommunication.cpp  ifmapcommunication.h  lowlevelcommunication.h  lowlevelcurlcommunication.cpp  lowlevelcurlcommunication.h  payload.h  ssrc.cpp  ssrc.h
trunk/examples/: ip-mac.cpp  metadata-examples.cpp  pdp-dhcp-example.cpp  subTest.cpp  test-identifiers.cpp  test-purge-publisher.cpp  test_new.cpp
trunk/identifier/: accessrequest.cpp  device.cpp  identifier.cpp  identifier.h  identifiers.cpp  identifiers.h  identifierwithad.cpp  identifierwithad.h  identity.cpp  identity.h  ipaddress.cpp  ipaddress.h  macaddress.cpp
trunk/include/: identifiers.h  identity.h  ifmapcommunication.h  lowlevelcurlcommunication.h  metadata.h  newsessionresult.h  ssrc.h  typedefs.h  xmlmarshalable.h
trunk/libifmap2c/: CMakeLists.txt
trunk/libifmap2c-examples/: CMakeLists.txt  ChangeLog  ar-cap.cpp  ar-mac.cpp  auth-by.cpp  errorprint.cpp  layer2-info.cpp  pdp-dhcp-example.cpp  purge.cpp  subTest.cpp  test-close-conn.cpp  test-identifiers.cpp  test-irond-event-twice.cpp  test-notify-event-twice.cpp  test-single-multi.cpp  test-update-twice.cpp  test-wrong-cardinality.cpp
trunk/metadata/: metadata.cpp  metadata.h
trunk/request/: endsessionrequest.cpp  newsessionrequest.cpp  newsessionrequest.h  pollrequest.h  publishdelete.cpp  publishnotify.cpp  publishrequest.cpp  publishrequest.h  publishupdate.cpp  publishupdate.h  purgepublisherrequest.cpp  renewsessionrequest.cpp  requests.cpp  requests.h  searchrequest.cpp  subpublish.cpp  subpublish.h  subscribedelete.cpp  subscribedelete.h  subscriberequest.cpp  subscriberequest.h  subscribeupdate.cpp  subsubscribe.cpp  subsubscribe.h
trunk/response/: errorresulterror.cpp  newsessionresult.cpp  newsessionresult.h  pollresult.cpp  responseparseerror.h  responseparser.cpp  responseparser.h  resultitem.h  searchresult.cpp  searchresult.h
trunk/xml/: basicxmlmarshalable.cpp  basicxmlmarshalable.h  libxml2marshaller.cpp  libxml2marshaller.h  libxml2unmarshaller.h  xmlmarshalable.cpp  xmlmarshalable.h  xmlmarshaller.h
(+513 files in other folders)
